<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to {0}</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your carrier does not support disabling call-forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to {0}</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="answer_features_setting_category_miui">Answer settings</string>
    <string name="answer_widget_dialog_title_miui">Select your answer gesture</string>
    <string name="answer_widget_title_miui">Answer gesture</string>
    <string name="auto_answer_pref_title_miui">Auto answer</string>
    <string name="auto_ip_setting_miui">Automatic IP settings</string>
    <string name="auto_record_call_summary_miui">Start recording while the call is connected, and save it to folder MIUI/sound_recorder/call_rec of SD card</string>
    <string name="auto_record_call_title_miui">Record automatically</string>
    <string name="auto_redial_pref_summary_miui">Redial numbers automatically if line is busy</string>
    <string name="auto_redial_pref_title_miui">Auto redial</string>
    <string name="auto_retry_mode_summary_miui">Enable Auto Retry mode</string>
    <string name="auto_retry_mode_title_miui">Auto Retry</string>
    <string name="caller_id_sum_miui">Hide/show my number for outgoing calls (if network support)</string>
    <string name="caller_id_title_miui">Caller ID</string>
    <string name="call_forwarding_settings_miui">Call forwarding settings</string>
    <string name="call_log_number_limit_miui">Call log quantity restrictions</string>
    <string name="call_log_number_limit_summary_miui">Limit the storage amount of call log to ensure efficiency</string>
    <string name="call_log_number_limit_key_title">Maximum</string>
    <string name="call_recording_notification_summary_miui">Show notification in status bar when recording is completed</string>
    <string name="call_recording_notification_title_miui">Call recording notification</string>
    <string name="call_settings_category_miui">Call settings</string>
    <string name="call_settings_miui">Call settings</string>
    <string name="call_waiting_sum_miui">During a call, notify me of incoming calls</string>
    <string name="carrier_related_setting_catory_miui">Carrier related settings</string>
    <string name="connect_disconnect_vibrate_summary_miui">Vibrate when receiver answers/hangs up</string>
    <string name="connect_disconnect_vibrate_title_miui">Vibration</string>
    <string name="crystaltalk_summary_miui">Call audio configuration optimization</string>
    <string name="crystaltalk_title_miui">NICAM setting</string>
    <string name="cw_title_miui">Call waiting</string>
    <string name="dtmf_tones_summary_miui">Set the length of DTMF tones</string>
    <string name="dtmf_tones_title_miui">DTMF Tones</string>
    <string name="enable_proximity_summary_miui">Enable proximity sensor to disable screen display during calls</string>
    <string name="enable_proximity_title_miui">Enable proximity sensor</string>
    <string name="enforce_proximity_summary_miui">Prevent misuse of phone when not being used</string>
    <string name="enforce_proximity_title_miui">Enforce Proximity sensor</string>
    <string name="fdn_miui">Fixed Dialing Numbers</string>
    <string name="fdn_summary_miui">The above options are all disabled when FDN are enabled</string>
    <string name="hac_mode_summary_miui">Turn on hearing aid compatibility</string>
    <string name="hac_mode_title_miui">Hearing aids</string>
    <string name="handon_ringer_summary_miui">In vain when vibration enabled for incoming call</string>
    <string name="handon_ringer_title_miui">Quiet ring on pickup</string>
    <string name="other_settings_miui">Other settings</string>
    <string name="sip_settings_miui">Internet call</string>
    <string name="telocation_setting_miui">Location setting</string>
    <string name="tty_mode_option_summary_miui">Set TTY mode</string>
    <string name="tty_mode_option_title_miui">TTY mode</string>
    <string name="turnover_mute_title_miui">Flip to silence</string>
    <string name="voicemail_settings_miui">Voicemail settings</string>
    <string name="voice_privacy_miui">Voice Privacy</string>
    <string name="voice_privacy_summary_miui">Enable enhanced privacy mode</string>
</resources>